# ektools

./: .projectile  README.md  actions.py  conversion.py  corrplot.py  eklist  eklist.py  ekmeta.py  ekplot.py  eksplit.py  ektools.py  output.py  rawdecode.py  requirements.txt  setup.cfg  setup.py
ektools/: __init__.py  actions.py  annotations.py  conversion.py  date_conversion.py  korona_parsers.py  rawdecode.py  simrad_parsers.py
tests/: test.sh
tools/: corrplot  eklist  ekmerge  ekmeta  ekplot  eksplit  eksplit.py  gpx2nmea
util/: actions.py  conversion.py  ektools.py  simrad_parsers.py  simrad_raw_file.py
