[metadata]
name = ektools
version = 0.1.1
description = Utilities to read and process Simrad RAW files.
long_description= file: README.md
url = http://github.com/ketil-malde/ektools
author = Ketil Malde
author_email = ketil@malde.org
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console

[options]
packages = ektools
scripts = tools/eklist, tools/eksplit, tools/ekplot, tools/ekmeta
install_requires= pynmea2; numpy; lxml; pytz

[flake8]
ignore = E302,E203,E305,E701,E501
